0.8 -
Memory leak fixed
Only pages are shown in full-screen mode
Google Local style scrolling: just drag to move the page!
Thumbnail browser

0.7 -
Fit to Width and Fit to Height now better uses available space
Scrollbars should not show up unless needed anymore
Right-click menu
Revert to scrolling to the top on page change
Can open directories of images

0.6 -
Unicode support
Windows version
(Prev|Next)PageTurn() bug fixes
No longer calling GoToPage() when the page numbers haven't changed
Intelligently determine whether an image will require scrollbars, and resize
 accordingly
Display correct pages when going from ONEPAGE mode to TWOPAGE mode
User can now set cache length

0.5 -
bzip2 support has been dropped until someone actually needs it
Now using non-GPL unrar code for cbr's
Added exception to GPL to use unrar
Now using zlib and wxZipInputStream for cbz's
6 selectable scaling algorithms
Moved page navigation features to "Go" menu
Functions renamed for consistency (Zoom, Mode, and Filter)
View settings, window dimensions, and current working directory are now saved
Read-ahead caching and multithreading for responsiveness
Added ability to rotate pages
Added page navigation button bar to the bottom of the window

0.4 -
Added support for bzip2 archives, with extension .bz2 or .cbb
Added more sensical keyboard shortcuts
New icon, courtesy of gotterdamm
Added Fit to Width and Fit to Height zoom modes
Added Single Page mode
New configure script generated by KDevelop
Now using wxLog instead of stderr for logging and errors
Added Go To Page function

0.3 -
You can specify a comic book from the commandline now
Starts with open dialog when started without arguments
Added single page slide
PNG, GIF, and TIFF pages now supported, but untested
Lots of functions and variables renamed from *jpeg* to *image*
Added image resizing from FreeImage 3.  Looks SO much better.
Put ComicalCanvas canvas class into its own source file

0.2 -
Pages are now sorted