@@ -3,6 +3,7 @@ Memory leak fixed
 Only pages are shown in full-screen mode
 Google Local style scrolling: just drag to move the page!
 Thumbnail browser
+GetPage* functions now return NULL if the page is not ready
 
 0.7 -
 Fit to Width and Fit to Height now better uses available space
